# ward_carrier

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  STM32G431KBTx_FLASH.ld  Ward_Carrier.ioc
Apps/: DCMotor.hpp  MovementController.hpp  Ward_Carrier.hpp  main1.cpp  test.hpp
Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
Core/Src/: adc.c  dma.c  fdcan.c  gpio.c  i2c.c  main.c  stm32g4xx_it.c  tim.c
Drivers/: CMakeLists.txt
Ext_libs/: CMakeLists.txt
Ext_libs/IO/: Button.hpp  PIN.hpp
Ext_libs/xt2_common/: 25aa02uid.hpp  adc_param.hpp  array.hpp  axis_base.hpp  axis_device.hpp  axis_motor.hpp  base_device.hpp  brake.hpp  bucky_ctrl.hpp  buttons.hpp  calibration.hpp  can_port.hpp  can_queue.hpp  led.hpp  ltc1861.hpp  pack2x.hpp  port_pin.hpp  step_driver.hpp  stepper_base.hpp  stepper_dir.hpp  stepper_man.hpp  stepper_pid.hpp  system_def.hpp
Ext_libs/xt2_common/[deprecated]/: axis.hpp  position_control.hpp  stepper_pid.hpp
cmake/: toolchain.cmake  utils.cmake
