cmake_minimum_required(VERSION 3.16)

file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
        )

file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/*.c
        ${CMAKE_CURRENT_SOURCE_DIR}/*.s
        ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
        )

add_library(${PROJECT_NAME}-Ext_libs OBJECT)

target_include_directories(${PROJECT_NAME}-Ext_libs
        SYSTEM PUBLIC
        ${PROJECT_SOURCE_DIR}/Core/Inc
        ${CMAKE_CURRENT_SOURCE_DIR}/protos_core_sa
        ${CMAKE_CURRENT_SOURCE_DIR}/xt2_common
        ${CMAKE_CURRENT_SOURCE_DIR}/IO
        )

target_compile_definitions(${PROJECT_NAME}-Ext_libs
        PUBLIC
        )

target_sources(${PROJECT_NAME}-Ext_libs
        PUBLIC
        ${HEADERS}
        PRIVATE
        ${SOURCES}
        )